tests/fsharp/typecheck/sigs/neg94.bsl

neg94.fs(6,12,6,21): typecheck error FS0039: The value or constructor 'undefined' is not defined
